[gd_scene load_steps=44 format=2]

[ext_resource path="res://assets/images/protagonistaspritesheet.png" type="Texture" id=1]
[ext_resource path="res://Player/Player.gd" type="Script" id=2]
[ext_resource path="res://assets/fonts/8-bit-pusab.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://assets/music/FugaDMaj.ogg" type="AudioStream" id=4]

[sub_resource type="CapsuleShape2D" id=1]
radius = 3.95894
height = 2.6182

[sub_resource type="Animation" id=2]
resource_name = "AndarDireita"
length = 0.3
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 9, 3, 8 ]
}

[sub_resource type="Animation" id=3]
resource_name = "AndarEsquerda"
length = 0.3
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:region_rect")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray(  ),
"transitions": PoolRealArray(  ),
"update": 1,
"values": [  ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 6, 1, 7 ]
}

[sub_resource type="Animation" id=4]
length = 0.3
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 4, 0, 11 ]
}

[sub_resource type="Animation" id=5]
length = 0.3
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 10, 2, 5 ]
}

[sub_resource type="Animation" id=6]
resource_name = "CorreBaixo"
length = 0.3
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 12, 13, 16 ]
}

[sub_resource type="Animation" id=7]
resource_name = "CorreCima"
length = 0.3
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 14, 15, 17 ]
}

[sub_resource type="Animation" id=8]
resource_name = "CorreDireita"
length = 0.3
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 21, 22, 23 ]
}

[sub_resource type="Animation" id=9]
resource_name = "CorreEsquerda"
length = 0.3
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 18, 19, 20 ]
}

[sub_resource type="Animation" id=10]
length = 0.1
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 2 ]
}

[sub_resource type="Animation" id=11]
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}

[sub_resource type="Animation" id=12]
resource_name = "IdleLadoDireito"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 3 ]
}

[sub_resource type="Animation" id=13]
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 1 ]
}

[sub_resource type="AnimationNodeAnimation" id=14]
animation = "AndarEsquerda"

[sub_resource type="AnimationNodeAnimation" id=15]
animation = "AndarParaCima"

[sub_resource type="AnimationNodeAnimation" id=16]
animation = "AndarParaBaixo"

[sub_resource type="AnimationNodeAnimation" id=17]
animation = "AndarDireita"

[sub_resource type="AnimationNodeAnimation" id=18]
animation = "AndarDireita"

[sub_resource type="AnimationNodeBlendSpace2D" id=19]
blend_point_0/node = SubResource( 14 )
blend_point_0/pos = Vector2( -1, 0 )
blend_point_1/node = SubResource( 15 )
blend_point_1/pos = Vector2( 0, -1 )
blend_point_2/node = SubResource( 16 )
blend_point_2/pos = Vector2( 0, 1 )
blend_point_3/node = SubResource( 17 )
blend_point_3/pos = Vector2( 1, 0 )
blend_point_4/node = SubResource( 18 )
blend_point_4/pos = Vector2( 1, -0.1 )
blend_mode = 1

[sub_resource type="AnimationNodeAnimation" id=20]
animation = "CorreEsquerda"

[sub_resource type="AnimationNodeAnimation" id=21]
animation = "CorreDireita"

[sub_resource type="AnimationNodeAnimation" id=22]
animation = "CorreBaixo"

[sub_resource type="AnimationNodeAnimation" id=23]
animation = "CorreCima"

[sub_resource type="AnimationNodeBlendSpace2D" id=24]
blend_point_0/node = SubResource( 20 )
blend_point_0/pos = Vector2( -1, 0 )
blend_point_1/node = SubResource( 21 )
blend_point_1/pos = Vector2( 1, 0 )
blend_point_2/node = SubResource( 22 )
blend_point_2/pos = Vector2( 0, 0.985455 )
blend_point_3/node = SubResource( 23 )
blend_point_3/pos = Vector2( 0, -1 )
blend_mode = 1

[sub_resource type="AnimationNodeAnimation" id=25]
animation = "IdleLadoDireito"

[sub_resource type="AnimationNodeAnimation" id=26]
animation = "IdleFrente"

[sub_resource type="AnimationNodeAnimation" id=27]
animation = "IdleCosta"

[sub_resource type="AnimationNodeAnimation" id=28]
animation = "IdleLadoEsquerdo"

[sub_resource type="AnimationNodeBlendSpace2D" id=29]
blend_point_0/node = SubResource( 25 )
blend_point_0/pos = Vector2( 1, 0 )
blend_point_1/node = SubResource( 26 )
blend_point_1/pos = Vector2( 0, 1 )
blend_point_2/node = SubResource( 27 )
blend_point_2/pos = Vector2( 0, -1 )
blend_point_3/node = SubResource( 28 )
blend_point_3/pos = Vector2( -1, 0 )
blend_mode = 1

[sub_resource type="AnimationNodeStateMachineTransition" id=30]

[sub_resource type="AnimationNodeStateMachineTransition" id=31]

[sub_resource type="AnimationNodeStateMachineTransition" id=32]

[sub_resource type="AnimationNodeStateMachineTransition" id=33]

[sub_resource type="AnimationNodeStateMachineTransition" id=34]

[sub_resource type="AnimationNodeStateMachineTransition" id=35]

[sub_resource type="AnimationNodeStateMachine" id=36]
states/Andando/node = SubResource( 19 )
states/Andando/position = Vector2( 692, 105 )
states/Correndo/node = SubResource( 24 )
states/Correndo/position = Vector2( 539, 217 )
states/Parado/node = SubResource( 29 )
states/Parado/position = Vector2( 362, 105 )
transitions = [ "Parado", "Andando", SubResource( 30 ), "Andando", "Parado", SubResource( 31 ), "Parado", "Correndo", SubResource( 32 ), "Correndo", "Parado", SubResource( 33 ), "Correndo", "Andando", SubResource( 34 ), "Andando", "Correndo", SubResource( 35 ) ]
start_node = "Parado"

[sub_resource type="AnimationNodeStateMachinePlayback" id=37]

[sub_resource type="DynamicFont" id=38]
size = 8
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=39]
size = 6
font_data = ExtResource( 3 )

[node name="Player" type="KinematicBody2D"]
position = Vector2( -2.30187, -3.30596 )
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( 0.385555, 4.90739 )
rotation = 1.55051
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( -0.366357, 0.157011 )
scale = Vector2( 1.00748, 0.983473 )
texture = ExtResource( 1 )
vframes = 4
hframes = 6
frame = 1
region_rect = Rect2( 56, 20, 14, 18 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/AndarDireita = SubResource( 2 )
anims/AndarEsquerda = SubResource( 3 )
anims/AndarParaBaixo = SubResource( 4 )
anims/AndarParaCima = SubResource( 5 )
anims/CorreBaixo = SubResource( 6 )
anims/CorreCima = SubResource( 7 )
anims/CorreDireita = SubResource( 8 )
anims/CorreEsquerda = SubResource( 9 )
anims/IdleCosta = SubResource( 10 )
anims/IdleFrente = SubResource( 11 )
anims/IdleLadoDireito = SubResource( 12 )
anims/IdleLadoEsquerdo = SubResource( 13 )

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource( 36 )
anim_player = NodePath("../AnimationPlayer")
active = true
parameters/playback = SubResource( 37 )
parameters/Andando/blend_position = Vector2( -0.895476, -0.0181818 )
parameters/Correndo/blend_position = Vector2( 0.850234, 0.0690908 )
parameters/Parado/blend_position = Vector2( -0.825273, 0.0690908 )

[node name="LineEdit" type="LineEdit" parent="."]
margin_left = -156.509
margin_top = 75.4715
margin_right = -48.5094
margin_bottom = 99.4715
rect_scale = Vector2( 0.793476, 0.48546 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Camera2D" type="Camera2D" parent="."]
current = true

[node name="Timer" type="Timer" parent="."]

[node name="Enviar" type="Button" parent="."]
margin_left = -66.1694
margin_top = 77.1885
margin_right = -16.1694
margin_bottom = 97.1885
rect_scale = Vector2( 0.480133, 0.438066 )
text = "Enviar"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Speach" type="RichTextLabel" parent="."]
margin_left = -20.5025
margin_top = -47.3807
margin_right = 149.498
margin_bottom = -26.3807
custom_fonts/normal_font = SubResource( 38 )
tab_size = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Nome" type="Label" parent="."]
margin_left = -17.2701
margin_top = -23.2869
margin_right = 23.7299
margin_bottom = -10.2869
custom_fonts/font = SubResource( 39 )
custom_colors/font_color = Color( 0.909804, 0.764706, 0.0588235, 0.694118 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Music" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 4 )
volume_db = 10.0
autoplay = true
max_distance = 2002.0

[node name="Button" type="Button" parent="."]
margin_left = -157.0
margin_top = -88.0
margin_right = -112.0
margin_bottom = -68.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Mute"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="pressed" from="Enviar" to="." method="_on_Enviar_pressed"]
[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
